@@ -8,6 +8,8 @@ import org.bukkit.util.Vector;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class TeamBasedEffect {
 
@@ -40,7 +42,9 @@ public class TeamBasedEffect {
     }
 
     public void display(GameTeamContainer teams, float offsetX, float offsetY, float offsetZ, float speed, int amount, Location center) {
-        display(ownTeam, ownTeamData, offsetX, offsetY, offsetZ, speed, amount, center, teams.getAllyPlayers().toList());
+        List<Player> allies = teams.getAllyPlayers().collect(Collectors.toList());
+        allies.addAll(teams.getSpectators().toList());
+        display(ownTeam, ownTeamData, offsetX, offsetY, offsetZ, speed, amount, center, allies);
         display(enemyTeam, enemyTeamData, offsetX, offsetY, offsetZ, speed, amount, center, teams.getEnemyPlayers().toList());
     }
 
@@ -61,7 +65,9 @@ public class TeamBasedEffect {
     }
 
     public void display(GameTeamContainer teams, Vector direction, float speed, Location center) {
-        display(ownTeam, ownTeamData, direction.getX(), direction.getY(), direction.getZ(), speed, 0, center, teams.getAllyPlayers().toList());
+        List<Player> allies = teams.getAllyPlayers().collect(Collectors.toList());
+        allies.addAll(teams.getSpectators().toList());
+        display(ownTeam, ownTeamData, direction.getX(), direction.getY(), direction.getZ(), speed, 0, center, allies);
         display(enemyTeam, enemyTeamData, direction.getX(), direction.getY(), direction.getZ(), speed, 0, center, teams.getEnemyPlayers().toList());
     }
 
